// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestComponent snapshots 0 1`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots 0 2`] = `
<div>
  hello, 
  , 
</div>
`;

exports[`TestComponent snapshots 0 3`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots 0 4`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots 1 1`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots 1 2`] = `
<div>
  hello, 
  A
  , 
  B
</div>
`;

exports[`TestComponent snapshots 1 3`] = `
<div>
  hello, 
  A
  , 
  B
</div>
`;

exports[`TestComponent snapshots 2 1`] = `
<div>
  hello, 
  A
  , 
  B
</div>
`;

exports[`TestComponent snapshots does thing 1`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots does thing 2`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots does thing 3`] = `
<div>
  hello, 
  A
  , 
</div>
`;

exports[`TestComponent snapshots does things 1`] = `
<div>
  hello, 
  A
  , 
  B
</div>
`;

exports[`TestComponent snapshots does things 2`] = `
<div>
  hello, 
  A
  , 
  B
</div>
`;

exports[`TestComponent snapshots does things 3`] = `
<div>
  hello, 
  A
  , 
  B
</div>
`;

exports[`TestComponent snapshots fake props 1`] = `
<div>
  hello, 
  one
  , 
</div>
`;

exports[`TestComponent snapshots fake props 2`] = `
<div>
  hello, 
  one
  , 
</div>
`;

exports[`TestComponent snapshots fake props 3`] = `
<div>
  hello, 
  one
  , 
</div>
`;

exports[`TestComponent snapshots fake props 4`] = `
<div>
  hello, 
  one
  , 
</div>
`;

exports[`TestComponent snapshots fake props 5`] = `
<TestComponent
  one="one"
>
  <div>
    hello, 
    one
    , 
  </div>
</TestComponent>
`;

exports[`TestComponent snapshots fake props 6`] = `
<div>
  hello, 
  one
  , 
  two
</div>
`;

exports[`TestComponent snapshots with none 1`] = `
<div>
  hello, 
  , 
</div>
`;
